--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </header>
 
 <!-- Hero Section -->
-<section class="py-28 bg-cover bg-center" style="background-image: url('images/hero-background.jpg');">
+<section class="py-28 bg-cover bg-center" style="background-image: url('images/hero-background.JPG');">
     <div class="scandi-container px-6 flex flex-col items-center text-center">
         <div class="hero-overlay px-12 py-12 rounded-lg max-w-2xl">
             <h1 class="text-4xl smiley-font scandi-text-primary mb-6">Hello, I'm Chuyi</h1>
@@ -150,7 +150,7 @@
         <div class="flex flex-col md:flex-row items-start gap-16">
             <div class="md:w-1/2 self-center">
                 <div class="max-w-md mx-auto">
-                    <img src="images/about-me.jpg" alt="About Me Image" class="rounded-lg shadow-md w-full object-cover">
+                    <img src="images/about-me.JPG" alt="About Me Image" class="rounded-lg shadow-md w-full object-cover">
                 </div>
             </div>
             
@@ -183,7 +183,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
             <!-- Project 1 -->
             <div class="scandi-card overflow-hidden">
-                <img src="images/project1.jpg" alt="Stockholm, Sweden" class="w-full h-52 object-cover">
+                <img src="images/project1.JPG" alt="Stockholm, Sweden" class="w-full h-52 object-cover">
                 <div class="p-8">
                     <h3 class="text-xl font-medium scandi-text-primary mb-3">Stockholm, Sweden</h3>
                     <p class="quote-text mb-6">Where ancient cobblestones whisper Nordic tales beneath the gentle dance of summer light, casting golden reflections across archipelago waters.</p>
@@ -196,7 +196,7 @@
             
             <!-- Project 2 -->
             <div class="scandi-card overflow-hidden">
-                <img src="images/project2.jpg" alt="Tallinn, Estonia" class="w-full h-52 object-cover">
+                <img src="images/project2.JPG" alt="Tallinn, Estonia" class="w-full h-52 object-cover">
                 <div class="p-8">
                     <h3 class="text-xl font-medium scandi-text-primary mb-3">Tallinn, Estonia</h3>
                     <p class="quote-text mb-6">Wandering through Tallinn's medieval embrace, each of twenty thousand steps reveals a chapter of time frozen between gothic spires and whispered Hanseatic secrets.</p>
